# learning_git

./: .gitignore  README.md  app.js  app.py  dusushesaplama.py  havadurumu.py  index.html  intelligence_cup_simulation.py  minisohbet.py  polymarket-bot-v3.jsx  polymarket-bot-v31.jsx  polymarket-bot-v32.jsx  polymarket-bot.jsx  polymarket-bot_v2.jsx  polymarket-v4.jsx  polymarket-v41.jsx  rubiks_cube_sim  styles.css
tefas_fund_analysis/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
tefas_fund_analysis/config/: config.example.json
tefas_fund_analysis/dashboard/: app.py
tefas_fund_analysis/examples/: daily_report.csv  daily_report.md
tefas_fund_analysis/scripts/: com.tefas.analysis.daily.plist.example  install_launchd_daily.sh  run_daily_tefas.sh  uninstall_launchd_daily.sh
tefas_fund_analysis/src/tefas_analysis/: __init__.py  __main__.py  config.py  main.py  operations.py  pipeline.py  schemas.py  utils.py
tefas_fund_analysis/src/tefas_analysis/analysis/: __init__.py  category_engine.py  money_flow_engine.py  performance_engine.py  recommendation_engine.py  risk_engine.py  tag_engine.py
tefas_fund_analysis/src/tefas_analysis/collectors/: __init__.py  csv_collector.py  tefas_collector.py
tefas_fund_analysis/tests/: test_automation_scripts.py  test_category_engine.py  test_config.py  test_csv_collector.py  test_main.py  test_money_flow_engine.py  test_operations.py  test_performance_engine.py  test_pipeline_all_funds.py  test_recommendation_engine.py  test_reports.py  test_risk_engine.py  test_tag_engine.py  test_tefas_collector.py
(+9 files in other folders)
