[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tefas-fund-analysis"
version = "0.1.0"
description = "Daily TEFAS mutual fund analysis MVP with deterministic scoring and reporting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10,<4",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "pydantic>=2.6,<3",
  "python-dotenv>=1.0,<2",
  "requests>=2.31,<3",
  "sqlalchemy>=2.0,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]
dashboard = [
  "plotly>=5.20,<7",
  "streamlit>=1.35,<2",
]

[project.scripts]
tefas-analysis = "tefas_analysis.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
